user identification works!! + some small fixes

--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -5,20 +5,24 @@
   <title>Chat Room</title>
 </head>
 <body>
-  <textarea id="chat-log" cols="100" rows="20"></textarea><br>
-  <input id="chat-message-input" type="text" size="100"><br>
-  <input id="chat-message-submit" type="button" value="Send">
+  <div align="center">
+    <textarea id="chat-log" cols="80" rows="40" readonly></textarea><br>
+    <input id="chat-message-input" type="text" size="72">
+    <input id="chat-message-submit" type="button" value="Send"><br>
+    <input id="user-name" type="hidden">
+  </div>
 </body>
 <script>
-  var roomName = {{ room_name_json }};
+  var room_name = {{ room_name_json }};
   var chatSocket = new WebSocket(
     'ws://' + window.location.host +
-    '/ws/chat/' + roomName + '/');
+    '/ws/chat/' + room_name + '/');
 
   chatSocket.onmessage = function(e) {
     var data = JSON.parse(e.data);
     var message = data['message'];
-    document.querySelector('#chat-log').value += (message + '\n');
+    var sender_name = data['sender_name'];
+    document.querySelector('#chat-log').value += (sender_name+': '+message+'\n');
   };
 
   chatSocket.onclose = function(e) {
@@ -27,7 +31,7 @@
 
   document.querySelector('#chat-message-input').focus();
   document.querySelector('#chat-message-input').onkeyup = function(e) {
-    if (e.keyCode === 13) {
+    if (e.keyCode === 13 && this.value != '') {
       document.querySelector('#chat-message-submit').click();
     }
   };
@@ -36,7 +40,7 @@
     var messageInputDom = document.querySelector('#chat-message-input');
     var message = messageInputDom.value;
     chatSocket.send(JSON.stringify({
-      'message': message
+      'message': message,
     }));
 
     messageInputDom.value = '';
