--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -6,10 +6,14 @@
 </head>
 <body>
   <div align="center">
-    <textarea id="chat-log" cols="80" rows="40" readonly></textarea><br>
-    <input id="chat-message-input" type="text" size="72">
-    <input id="chat-message-submit" type="button" value="Send"><br>
-    <input id="user-name" type="hidden">
+    <div style="float:left">
+      hogehogehoge
+    </div>
+    <div style="float:right">
+      <textarea id="chat-log" cols="80" rows="40" readonly></textarea><br>
+      <input id="chat-message-input" type="text" size="72">
+      <input id="chat-message-submit" type="button" value="送信"><br>
+    </div>
   </div>
 </body>
 <script>
@@ -17,19 +21,25 @@
   var chatSocket = new WebSocket(
     'ws://' + window.location.host +
     '/ws/chat/' + room_name + '/');
+  document.querySelector('#chat-message-input').focus();
 
   chatSocket.onmessage = function(e) {
     var data = JSON.parse(e.data);
     var message = data['message'];
     var sender_name = data['sender_name'];
     document.querySelector('#chat-log').value += (sender_name+': '+message+'\n');
+    if (sender_name != 'あなた') {
+      document.querySelector('#chat-message-input').disabled = false;
+      document.querySelector('#chat-message-input').value = '';
+      document.querySelector('#chat-message-input').focus();
+      document.querySelector('#chat-message-submit').disabled = false;
+    }
   };
 
   chatSocket.onclose = function(e) {
     console.error('Chat socket closed unexpectedly');
   };
 
-  document.querySelector('#chat-message-input').focus();
   document.querySelector('#chat-message-input').onkeyup = function(e) {
     if (e.keyCode === 13 && this.value != '') {
       document.querySelector('#chat-message-submit').click();
@@ -43,7 +53,9 @@
       'message': message,
     }));
 
-    messageInputDom.value = '';
+    messageInputDom.value = 'あいての返信を待っています…';
+    messageInputDom.disabled = true;
+    document.querySelector('#chat-message-submit').disabled = true;
   };
 </script>
 </html>
