--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Chat Room</title>
+  <title>チャットルーム</title>
 </head>
 <body>
   <div align="center">
