--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -7,7 +7,16 @@
 <body>
   <div align="center">
     <div style="float:left">
-      ここにpersonaのテーブルを入れる
+      あなたの設定は以下の通りです。<br>
+      <table border="1" cellpadding="5">
+        <tr><th>属性</th><th>値</th></tr>
+        {% for k,v in persona.items %}
+          <tr><td>{{k}}</td><td>{{v}}</td></tr>
+        {% endfor %}
+      </table>
+
+      instructions:
+        brahbrahbrah
     </div>
     <div style="float:right">
       <textarea id="chat-log" cols="80" rows="40" readonly></textarea><br>
