--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE HTML>
-<html>
+{% load static %}
+<html lang="ja">
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Cache-Control" content="no-cache">
   <title>控え室</title>
   <script>
     var uuid4 = (function() {
