--- a/chat/templates/chat/after_chat.html
+++ b/chat/templates/chat/after_chat.html
@@ -6,6 +6,7 @@
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Cache-Control" content="no-cache">
   <title>対話後アンケート</title>
+  <link rel="shortcut icon" href="{% static 'chat/favicon.ico' %}">
   <datalist id="attributes">
     {% for a in attributes %}
       <option value="{{a}}"></option>
