--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Cache-Control" content="no-cache">
   <title>控え室</title>
+  <link rel="shortcut icon" href="{% static 'chat/favicon.ico' %}">
   <script>
     var uuid4 = (function() {
       var d = +new Date();
