--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -6,6 +6,7 @@
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Cache-Control" content="no-cache">
   <title>チャットルーム</title>
+  <link rel="shortcut icon" href="{% static 'chat/favicon.ico' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'chat/room.css' %}">
 </head>
 <body>
