--- a/chat/templates/chat/thanks.html
+++ b/chat/templates/chat/thanks.html
@@ -6,6 +6,7 @@
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Cache-Control" content="no-cache">
   <title>ありがとうございました</title>
+  <link rel="shortcut icon" href="{% static 'chat/favicon.ico' %}">
   <script type="text/javascript">
     history.pushState(null, null, null);
     window.addEventListener("popstate", function(e){
