--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -12,17 +12,24 @@
 <body>
   <div id="left-panel">
     <div id="persona-table" align="center">
-      あなたの設定は以下の通りです。<br>
+      あなたの人物設定は以下の通りです。<br>
       <table border="1" cellpadding="5">
-        <tr><th>属性</th><th>値</th></tr>
+        <tr><th>項目</th><th>値</th></tr>
         {% for k,v in persona.items %}
           <tr><td>{{k}}</td><td>{{v}}</td></tr>
         {% endfor %}
       </table>
     </div>
     <div id="instruction">
-      instruction:<br>
-      ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ<br>ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ<br>ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ<br>ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ<br>ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ<br>
+      <h2>チャットの際の注意</h2>
+        <ol>
+        <li>チャット相手は、ロボットではなく人間です。<br>攻撃的・差別的な言葉、過度なスラングの使用などは控えてください。</li>
+        <li>「お互いに初対面」としての会話をしてください。</li>
+        <li>お互いにだいたい5項目分ずつ、自分のことを伝え、相手のことを知れたと思ったら、対話を終了してください。</li>
+        <li>あなた自身の本名、住所、電話番号等の個人情報を発言しないでください。</li>
+        <li>人物設定、チャット内容、相手の人物予想、追加した設定は記録され、今後の研究に用いられます。<br>ご了承の程よろしくお願い致します。</li>
+        <li>注意事項は以上です。チャットを楽しんでください。</li>
+        </ol>
     </div>
   </div>
   <div id="chat-space">
