--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -32,39 +32,41 @@
        この設定はランダムに生成されており、気に入らなければ再生成することができます。<br>
     <table border="1" cellpadding="5">
       <tr><th>項目</th><th>値</th></tr>
-      {% for k,v in persona.items %}
+      {% for k,v in persona %}
       <tr><td>{{k}}</td><td>{{v}}</td></tr>
       {% endfor %}
     </table><br>
     <form name="persona_form" method="POST">
       {% csrf_token %}
-      {% for k,v in persona.items %}
+      {% for k,v in persona %}
         <input type="hidden" name="persona" value="{{k}}={{v}}">
       {% endfor %}
     </form>
     この人物設定が気に入らない場合は「再生成」を押してください。<br>
     <input type="button" id="regenerate" value="再生成">
-    </li>
+    </li><br>
     <li>上の人物設定になりきって、チャットをしていただきます。<br>
-       チャットを通じて、自分がどんな人物かを相手に伝え、相手がどんな人物かを知ろうとしてください。<br>
-       与えられた人物設定にない設定も、自由に使ってください。<br>
-       例えば、あなたの人物設定に「年齢」という項目がなければ、相手に年齢を聞かれて何歳と答えても構いません。<br>
-       チャットの際の注意事項が下にありますので、よく読んでください。<br>
+       チャットを通じて、<font color="blue">お互いに相手がどんな人物か</font>を知ろうとしてください。<br>
+       <b>チャットの際の注意事項</b>が下にありますので、よく読んでください。<br>
     </li>
     <li>お互いのことを十分知れたと思ったら、チャットを終了してください。</li>
-    <li>チャット終了後、チャット相手の人物設定を予想して記入していただきます。<br>
-       また、チャット中に新しく使った設定があれば、記入してください。<br>
+    <li>チャット終了後、<font color="blue">チャット相手の人物設定を予想</font>して記入していただきます。<br>
+       また、<font color="blue">与えられた設定以外の設定</font>をチャットで使っていたら、記入してください。<br>
        全て記入し終わったら、送信ボタンを押してください。
     </li>
     </ol>
     <h2>チャットの際の注意</h2>
       <ol>
-      <li>チャット相手は、ロボットではなく人間です。<br>攻撃的・差別的な言葉、過度なスラングの使用などは控えてください。</li>
-      <li>「お互いに初対面」としての会話をしてください。</li>
-      <li>お互いにだいたい5項目分ずつ、自分のことを伝え、相手のことを知れたと思ったら、対話を終了してください。</li>
-      <li>あなた自身の本名、住所、電話番号等の個人情報を発言しないでください。</li>
-      <li>人物設定、チャット内容、相手の人物予想、追加した設定は記録され、今後の研究に用いられます。<br>ご了承の程よろしくお願い致します。</li>
-      <li>注意事項は以上です。チャットを楽しんでください。</li>
+      <li>チャット相手は、ロボットではなく<font color="blue">人間</font>です。
+          <font color="red">攻撃的・差別的な言葉、過度なスラングの使用</font>などは控えてください。</li>
+      <li>「<font color="blue">お互いに初対面</font>」としての会話をしてください。</li>
+      <li>お互いにだいたい5項目分、<font color="blue">相手のことを知れた</font>と思ったら、対話を終了してください。</li>
+      <li><font color="blue">与えられた人物設定以外の項目は、自由に連想</font>して話してください。<br>
+          例えば、あなたの人物設定に「年齢」という項目がなく、相手に年齢を聞かれた時は、何歳と答えても構いません。</li>
+      <li>与えられた設定の5項目を無理に伝える必要はありません。<font color="blue">自然な会話</font>を心がけてください。</li>
+      <li>あなた自身の<font color="red">本名、住所、電話番号等の個人情報</font>を発言しないでください。</li>
+      <li>人物設定、チャット内容、相手の人物予想、追加した設定は<font color="blue">記録され、今後の研究に用いられます</font>。ご了承の程よろしくお願い致します。</li>
+      <li>注意事項は以上です。<font color="blue"><b>チャットを楽しんでください</b></font>。</li>
       </ol>
     <p>
       以上のことをご理解いただけましたら、下のボタンからお進みください。
