--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -15,7 +15,7 @@
       あなたの人物設定は以下の通りです。<br>
       <table border="1" cellpadding="5">
         <tr><th>項目</th><th>値</th></tr>
-        {% for k,v in persona.items %}
+        {% for k,v in persona %}
           <tr><td>{{k}}</td><td>{{v}}</td></tr>
         {% endfor %}
       </table>
@@ -23,12 +23,16 @@
     <div id="instruction">
       <h2>チャットの際の注意</h2>
         <ol>
-        <li>チャット相手は、ロボットではなく人間です。<br>攻撃的・差別的な言葉、過度なスラングの使用などは控えてください。</li>
-        <li>「お互いに初対面」としての会話をしてください。</li>
-        <li>お互いにだいたい5項目分ずつ、自分のことを伝え、相手のことを知れたと思ったら、対話を終了してください。</li>
-        <li>あなた自身の本名、住所、電話番号等の個人情報を発言しないでください。</li>
-        <li>人物設定、チャット内容、相手の人物予想、追加した設定は記録され、今後の研究に用いられます。<br>ご了承の程よろしくお願い致します。</li>
-        <li>注意事項は以上です。チャットを楽しんでください。</li>
+        <li>チャット相手は、ロボットではなく<font color="blue">人間</font>です。
+            <font color="red">攻撃的・差別的な言葉、過度なスラングの使用</font>などは控えてください。</li>
+        <li>「<font color="blue">お互いに初対面</font>」としての会話をしてください。</li>
+        <li>お互いにだいたい5項目分、<font color="blue">相手のことを知れた</font>と思ったら、対話を終了してください。</li>
+        <li><font color="blue">与えられた人物設定以外の項目は、自由に連想</font>して話してください。<br>
+            例えば、あなたの人物設定に「年齢」という項目がなく、相手に年齢を聞かれた時は、何歳と答えても構いません。</li>
+        <li>与えられた設定の5項目を無理に伝える必要はありません。<font color="blue">自然な会話</font>を心がけてください。</li>
+        <li>あなた自身の<font color="red">本名、住所、電話番号等の個人情報</font>を発言しないでください。</li>
+        <li>人物設定、チャット内容、相手の人物予想、追加した設定は<font color="blue">記録され、今後の研究に用いられます</font>。ご了承の程よろしくお願い致します。</li>
+        <li>注意事項は以上です。<font color="blue"><b>チャットを楽しんでください</b></font>。</li>
         </ol>
     </div>
   </div>
