instructionを修正、退室時相手に伝わるように

--- a/chat/templates/chat/after_chat.html
+++ b/chat/templates/chat/after_chat.html
@@ -42,7 +42,9 @@
       <h2>相手の人物予想</h2>
       <p>
         チャット相手の人物設定を予想して、5つまで記入してください。<br>
-        項目の欄は選択肢が出ますが、選択肢以外のものでも構いません。
+        例えば、相手が「田中太郎、18歳です。」と言っていた場合、[姓:田中][名:太郎][年齢:18]のように記入してください。,<br>
+        項目の欄は選択肢が出ますが、選択肢以外にも自由に記入して構いません。<br>
+        例えば、相手が「カレーが好きです。」と言っていた場合、[好きな食べ物:カレー]や[好物:カレー]のように記入してください。
       </p>
       <table>
         <tr><th>項目</th><th>値</th></tr>
@@ -58,8 +60,8 @@
       <p>
         チャット中に使った、あなたの元々の人物設定にはない設定を記入してください。<br>
         例えば、「年齢」という項目がないのに「18歳です」と発言した場合、項目に「年齢」、値に「18」を記入してください。<br>
-        項目の欄は選択肢が出ますが、選択肢以外のものでも構いません。<br>
-        <font size="-1">現在、欄を追加ボタンを押すと記入したものが消えてしまうので、先に十分な数の欄を作ってからご記入ください。</font>
+        項目の欄は選択肢が出ますが、選択肢以外にも自由に記入して構いません。<br>
+        <font size="-1">※現在、「欄を追加」ボタンを押すと記入したものが消えてしまうので、先に十分な数の欄を作ってからご記入ください。</font>
       </p>
       <table id="sup-persona-table">
         <tr><th>項目</th><th>値</th><th></th></tr>
