--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -25,11 +25,11 @@
     <p>与えられた人物設定になりきって、チャットをしてください。</p>
   </div>
   <hr>
-  <div style="margin-left: 20vw">
+  <div style="margin-left: 10vw">
     <h2>手順説明</h2>
     <ol>
     <li>あなたがなりきる人物設定を確認してください。<br>
-       この設定はランダムに生成されており、気に入らなければ再生成することができます。<br>
+       この設定はランダムに生成されており、何度でも再生成することができます。<br>
     <table border="1" cellpadding="5">
       <tr><th>項目</th><th>値</th></tr>
       {% for k,v in persona %}
@@ -42,7 +42,7 @@
         <input type="hidden" name="persona" value="{{k}}={{v}}">
       {% endfor %}
     </form>
-    この人物設定が気に入らない場合は「再生成」を押してください。<br>
+    この人物設定に違和感がある/なりきるのが難しい/気に入らないなどの場合は「再生成」を押してください。<br>
     <input type="button" id="regenerate" value="再生成">
     </li><br>
     <li>上の人物設定になりきって、チャットをしていただきます。<br>
@@ -57,22 +57,23 @@
     </ol>
     <h2>チャットの際の注意</h2>
       <ol>
-      <li>チャット相手は、ロボットではなく<font color="blue">人間</font>です。
+      <li>チャット相手は、ロボットではなく人間です。
           <font color="red">攻撃的・差別的な言葉、過度なスラングの使用</font>などは控えてください。</li>
-      <li>「<font color="blue">お互いに初対面</font>」としての会話をしてください。</li>
-      <li>お互いにだいたい5項目分、<font color="blue">相手のことを知れた</font>と思ったら、対話を終了してください。</li>
+      <li>「お互いに初対面」としての会話をしてください。あいさつや自己紹介から始めましょう。</li>
+      <li>お互いにだいたい5項目分、相手のことを知れたと思ったら、対話を終了してください。</li>
       <li><font color="blue">与えられた人物設定以外の項目は、自由に連想</font>して話してください。<br>
           例えば、あなたの人物設定に「年齢」という項目がなく、相手に年齢を聞かれた時は、何歳と答えても構いません。</li>
-      <li>与えられた設定の5項目を無理に伝える必要はありません。<font color="blue">自然な会話</font>を心がけてください。</li>
+      <li>与えられた設定の5項目全てを無理に伝える必要はありません。自然な会話を心がけてください。</li>
       <li>あなた自身の<font color="red">本名、住所、電話番号等の個人情報</font>を発言しないでください。</li>
-      <li>人物設定、チャット内容、相手の人物予想、追加した設定は<font color="blue">記録され、今後の研究に用いられます</font>。ご了承の程よろしくお願い致します。</li>
+      <li>人物設定、チャット内容、相手の人物予想、追加した設定は記録され、対話AIの研究に用いられます。ご了承の程よろしくお願い致します。</li>
       <li>注意事項は以上です。<font color="blue"><b>チャットを楽しんでください</b></font>。</li>
       </ol>
     <p>
-      以上のことをご理解いただけましたら、下のボタンからお進みください。
+      以上のことをご理解いただけましたら、下のボタンからお進みください。<br>
+      他の参加者とマッチングし次第、チャットルームに移動します。
     </p>
       <div id="announce-message">
-        <input type="button" id="matching-start-input" value="次へ進む">
+        <input type="button" id="matching-start-input" value="チャットルームに入る">
       </div>
   </div>
   <script>
